# asllvm

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  README.md
3rd/: CMakeLists.txt
doc/: compat.md  performance.md  status.md
include/angelscript-llvm/: config.hpp  jit.hpp
include/angelscript-llvm/detail/: ashelper.hpp  asinternalheaders.hpp  assert.hpp  builder.hpp  bytecodeinstruction.hpp  functionbuilder.hpp  fwd.hpp  jitcompiler.hpp  llvmglobals.hpp  modulebuilder.hpp  modulecommon.hpp  modulemap.hpp  runtime.hpp
include/angelscript-llvm/detail/codegen/: context.hpp  debuginfo.hpp  functioncontext.hpp  stackframe.hpp
include/asllvm/: jit.hpp
include/asllvm/detail/: ashelper.hpp  asinternalheaders.hpp  builder.hpp  debuginfo.hpp  functionbuilder.hpp  functioncontext.hpp  fwd.hpp  jitcompiler.hpp  modulebuilder.hpp  modulemap.hpp  runtime.hpp  stackframe.hpp  vmstate.hpp
include/asllvm/detail/codegen/: debuginfo.hpp  functioncontext.hpp  stackframe.hpp
samples/simple/: CMakeLists.txt  main.cpp
samples/simple/workdir/: script.as
src/angelscript-llvm/: jit.cpp
src/angelscript-llvm/detail/: ashelper.cpp  assert.cpp  builder.cpp  functionbuilder.cpp  jitcompiler.cpp  llvmglobals.cpp  modulebuilder.cpp  modulecommon.cpp  modulemap.cpp  runtime.cpp
src/angelscript-llvm/detail/codegen/: debuginfo.cpp  stackframe.cpp
src/asllvm/: jit.cpp
src/asllvm/detail/: allocationmanager.cpp  ashelper.cpp  assert.cpp  builder.cpp  debuginfo.cpp  functionbuilder.cpp  jitcompiler.cpp  llvmglobals.cpp  modulebuilder.cpp  modulecommon.cpp  modulemap.cpp  runtime.cpp  stackframe.cpp
src/asllvm/detail/codegen/: debuginfo.cpp  stackframe.cpp
tests/: CMakeLists.txt  booleans.cpp  branching.cpp  classmanip.cpp  common.cpp  common.hpp  enums.cpp  fib.as  floatmath.cpp  funcdefs.cpp  functions.cpp  globals.cpp  integermath.cpp  megatests.cpp  recursion.cpp  stringmanip.as  switch.as  typedefs.cpp  userclasses.as
tests/common/: CMakeLists.txt
tests/common/include/angelscript-llvm/tests/: common.hpp
tests/scripts/: arraymanip.as  bfint.as  devirt.as  enums.as  fib.as  funcdefs.as  functions.as  globals.as  initializationlists.as  refprimitives.as  sharedfuncs.as  stringmanip.as  typedefs.as  userclasses.as  vec3f.as
tests/scripts/arrays/: userclass.as
tests/test-integer-arithmetic/: CMakeLists.txt  main.cpp
tests/test-integer-arithmetic/workdir/: script.as
